1999-05-10  Matthias Clasen  <clasen@pong.mathematik.uni-freiburg.de>

	* fvwm/session.c (SaveWindowStates): save orig_g.[xy] - old_bw
	instead of orig_g.[xy] - the old_bw is added again in AddWindow.

Sun May  9 02:43:02 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* utils/Makefile.am: don't install fvwm_make_browse_menu.sh until
 	we have some consensus on _where_ to put it.

Sat May  8 14:29:10 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* fvwm/icons.c (Iconify): removed unused variable `dummy'.

1999-05-07  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/move_resize.c (ConstrainSize): make sure to stay within
	min and max.

	* fvwm/add_window.c (GetWindowSizeHints): 
	fix the fix to silently accept min width zero,
	reject any negative values in aspect ratios, scale the aspect
	ratios to be <= 65536 to avoid overflows in ConstrainSize.
	(gcd): removed. 	
	
1999-05-07  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>

	* fvwm/windowlist.c (do_windowList): fix call to do_menu.

Fri May  7 13:30:06 1999  DanEspen  <dje@blue>

	* utils/xpmroot.1: .TH line fixup.

	* fvwm/fvwm2.1: .TH line fixup.

	* AUTHORS: Added details for Albrech Kadlec.

1999-05-07  Hippo

	* fvwm.icons.c: support for client supplied icon pixmaps with
	fvwm running in a non-default visual

1999-05-07  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c (do_menu): fixed memory leak
	(menu_func): miExecuteAction -> ret_action

Fri May  7 00:43:44 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* utils/Makefile.am (BuildXLockMenu.1): build and distribute manpage.
	You will need 'pod2man' (from perl 5) to build the manpage, so don't
	edit BuildXLockMenu.in unless you have perl 5.

Thu May  6 23:14:11 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* libs/Module.h: add fvwm_packet_t type.

1999-05-07  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/events.c (HandleMapRequestKeepRaised):